<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_app"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@drawable/bg_image_rounded"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvTitleDP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="20dp"
            android:fontFamily="serif"
            android:text="@string/PL_titleDP"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvInstruccionesDP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="16dp"
            android:justificationMode="inter_word"
            android:text="@string/PL_instructionsDP"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvFechaDP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:paddingBottom="4dp"
            android:text="@string/PL_fechaDP"
            android:textColor="@color/secondaryText"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etFechaDP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/bg_edittext_rounded"
            android:backgroundTint="@color/PL_etbackground"
            android:enabled="false"
            android:padding="12dp"
            android:textColorHint="@color/secondaryText" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:paddingBottom="4dp"
            android:text="@string/PL_nroComensalesDP"
            android:textColor="@color/secondaryText"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etComensalesDP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/bg_edittext_rounded"
            android:backgroundTint="@color/PL_etbackground"
            android:inputType="number"
            android:padding="12dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="4dp"
            android:text="@string/PL_mealDP"
            android:layout_marginHorizontal="20dp"
            android:textColor="@color/secondaryText"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spComidaDiariaDP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_edittext_rounded"
            android:backgroundTint="@color/PL_etbackground"
            android:spinnerMode="dropdown" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCancelarDP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@drawable/bg_button_rounded_delete"
                android:backgroundTint="@color/cancel"
                android:text="@string/btnCancelar"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/btnAceptarDP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_button_rounded"
                android:backgroundTint="@color/accept"
                android:text="@string/btnAceptar"
                android:textColor="@android:color/black" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>